--- a/illustrrator.html
+++ b/illustrrator.html
@@ -169,7 +169,7 @@
       <div class="clearfix" id="u119_align_to_page">
        <div class="grpelem" id="u1479"><!-- custom html -->
         
-<div class="fb-like" data-href="http://morris.free.nf/illustrrator.html" data-send="false" data-width="291" data-show-faces="false" data-colorscheme="light" data-layout="standard" data-action="like"></div>
+<div class="fb-like" data-href="http://digitalparkour.github.io/morris/illustrrator.html" data-send="false" data-width="291" data-show-faces="false" data-colorscheme="light" data-layout="standard" data-action="like"></div>
 
 </div>
       </div>
